--- a/frontend/src/theme.postcss
+++ b/frontend/src/theme.postcss
@@ -83,14 +83,14 @@
 	--color-error-800: 83 8 12; /* ⬅ #53080c */
 	--color-error-900: 68 7 10; /* ⬅ #44070a */
 	/* surface | #000414 */
-	--color-surface-50: 217 217 220; /* ⬅ #d9d9dc */
-	--color-surface-100: 204 205 208; /* ⬅ #cccdd0 */
-	--color-surface-200: 191 192 196; /* ⬅ #bfc0c4 */
-	--color-surface-300: 153 155 161; /* ⬅ #999ba1 */
-	--color-surface-400: 77 79 91; /* ⬅ #4d4f5b */
-	--color-surface-500: 0 4 20; /* ⬅ #000414 */
-	--color-surface-600: 0 4 18; /* ⬅ #000412 */
-	--color-surface-700: 0 3 15; /* ⬅ #00030f */
-	--color-surface-800: 0 2 12; /* ⬅ #00020c */
-	--color-surface-900: 0 2 10; /* ⬅ #00020a */
+	--color-surface-50: 217 218 220; /* ⬅ #d9dadc */
+	--color-surface-100: 204 206 208; /* ⬅ #ccced0 */
+	--color-surface-200: 191 193 197; /* ⬅ #bfc1c5 */
+	--color-surface-300: 153 156 161; /* ⬅ #999ca1 */
+	--color-surface-400: 77 82 91; /* ⬅ #4d525b */
+	--color-surface-500: 0 8 21; /* ⬅ #000815 */
+	--color-surface-600: 0 7 19; /* ⬅ #000713 */
+	--color-surface-700: 0 6 16; /* ⬅ #000610 */
+	--color-surface-800: 0 5 13; /* ⬅ #00050d */
+	--color-surface-900: 0 4 10; /* ⬅ #00040a */
 }
