add layout modals update

--- a/frontend/src/app.postcss
+++ b/frontend/src/app.postcss
@@ -19,3 +19,6 @@ body {
 .hoverShadow {
 	@apply hover:scale-[101%] transition-all duration-300 hover:shadow-[0_2px_10px_-2.5px] hover:shadow-primary-600;
 }
+.hero-back {
+	@apply min-h-[94vh] bg-no-repeat bg-cover bg-center bg-surface-50 bg-[url('$lib/assets/hero-back.jpeg')]
+}
