fix merge issues

--- a/frontend/src/app.postcss
+++ b/frontend/src/app.postcss
@@ -104,7 +104,7 @@ body {
 	100% {
 		bottom: 100%;
 	}
-
+}
 .hero-back {
 	@apply min-h-[94vh] bg-no-repeat bg-cover bg-center bg-surface-50 bg-[url('$lib/assets/hero-back.jpeg')]
 }
