--- a/frontend/src/app.postcss
+++ b/frontend/src/app.postcss
@@ -33,7 +33,7 @@ body {
 		border: none;
 	}
 	100% {
-		border: #75FFFF solid 2px;
+		border: #75ffff solid 2px;
 	}
 }
 
@@ -46,7 +46,7 @@ body {
 	left: -100%;
 	width: 100%;
 	height: 2px;
-	background: linear-gradient(90deg, transparent, #75FFFF);
+	background: linear-gradient(90deg, transparent, #75ffff);
 	animation: animate1 0.5s linear forwards;
 }
 @keyframes animate1 {
@@ -62,7 +62,7 @@ body {
 	right: 0;
 	width: 2px;
 	height: 100%;
-	background: linear-gradient(180deg, transparent, #75FFFF);
+	background: linear-gradient(180deg, transparent, #75ffff);
 	animation: animate2 0.5s 0.25s linear forwards;
 }
 @keyframes animate2 {
@@ -78,7 +78,7 @@ body {
 	right: -100%;
 	width: 100%;
 	height: 2px;
-	background: linear-gradient(270deg, transparent, #75FFFF);
+	background: linear-gradient(270deg, transparent, #75ffff);
 	animation: animate3 0.5s 0.5s linear forwards;
 }
 @keyframes animate3 {
@@ -94,7 +94,7 @@ body {
 	left: 0;
 	width: 2px;
 	height: 100%;
-	background: linear-gradient(360deg, transparent, #75FFFF);
+	background: linear-gradient(360deg, transparent, #75ffff);
 	animation: animate4 0.5s 0.75s linear forwards;
 }
 @keyframes animate4 {
@@ -104,7 +104,7 @@ body {
 	100% {
 		bottom: 100%;
 	}
-
+}
 .hero-back {
-	@apply min-h-[94vh] bg-no-repeat bg-cover bg-center bg-surface-50 bg-[url('$lib/assets/hero-back.jpeg')]
+	@apply min-h-[94vh] bg-no-repeat bg-cover bg-center bg-surface-50 bg-[url('$lib/assets/hero-back.jpeg')];
 }
